--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "uglifyjs": "2.4.10",
     "watchify": "^3.7.0"
   },
   "repository": {
